--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Melty Cookies Recipe</title>
 </head>
 <body>
     <h1>The Best Cookies on The Planet!</h1>
+    <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80">
+    <h2>Fresh out of the oven these cookies will melt into your tastebuds!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
+        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud 
+        exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+
+    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, 
+        vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan. Nam liber tempor 
+        cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat 
+        facer possim assum. Typi non habent</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>8 tablespoons (113g) unsalted butter, room temperature</li>
+            <li>1/3 cup + 1 tablespoon (85g) granulated sugar</li>
+            <li>1/3 cup (71g) light brown sugar or dark brown sugar, packed</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1 teaspoon Vanilla Extract</li>
+            <li>1/4 teaspoon baking soda</li>
+            <li>1/2 teaspoon baking powder</li>
+            <li>1 large egg</li>
+            <li>1 1/2 cups (180g) Unbleached All-Purpose Flour</li>
+            <li>2 tablespoons (28g) milk, optional for cakier cookies</li>
+            <li>2 cups (227g to 340g) chips, nuts, and/or dried fruit, optional</li>
+        </ul>
+
+        <h2>Instructions</h2>
+
+        <h4>Only ten easy steps!</h4>
+        <ol>
+            <li>Preheat the oven to 375°F. Lightly grease two baking sheets, or line with 
+                parchment.</li>
+            <li>Beat together the butter, sugars, vanilla, salt, baking powder, and baking 
+                soda till well combined and lightened in color.</li>
+            <li>Add the egg, beating till smooth. Scrape the sides of the bowl, and beat 
+                again till smooth.</li>
+            <li>Add the flour, mixing it in completely.</li>
+            <li>If you're making cookies using chips, nuts, etc, beat in the milk, then the add-ins.</li>
+            <li>If you're making plain cookies, without add-ins, omit the milk.</li>
+            <li>Drop the cookies by the generous tablespoon onto the prepared baking sheets, 
+                spacing them about 2" apart. A tablespoon cookie scoop works well here.</li>
+            <li>Bake the cookies for 10 to 14 minutes (or up to 16 minutes; ovens may vary). 
+                The cookies should be a light golden brown, and a bit darker around the edges. For softer cookies, 
+                bake the shorter amount of time; for crunchy cookies, bake longer.</li>
+            <li>Remove the cookies from the oven, and cool right on the baking sheets.</li>
+            <li>Store these basic chocolate chip cookies airtight at room temperature for several days. Freeze for longer storage.</li>
+
+        </ol>
+ 
 </body>
 </html>
