this is the final commit including the two finished pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li></li><a href="recipes/cookies.html">The Best Cookies!</a>
-    <li></li><a href="recepis/lasagna.html">The Best Lasagna!</a>
+    <li><a href="recipes/cookies.html">The Best Cookies!</a></li>
+    <li><a href="recipes/lasagna.html">The Best Lasagna!</a></li>
     </ul>
 </body>
 </html>
